Add color and size to heading and shopping cart image to header.
Add color and size to heading and shopping cart image to header.

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,19 +8,27 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Amazon</h1>
-    <header>
-      <div class="container">
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Shop</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Sample Page</a></li>
-          <li><a href="">Discount 10%</a></li>
-          <li><a href="">Contacts</a></li>
-          <li><a href="">Buy Theme</a></li>
-        </ul>
-      </div>
-    </header>
+    <div class="wrapper">
+      <header class="main-header">
+        <div class="container"></div>
+        <h1 class="name">Amazon</h1></li>
+         <ul>
+        <li><img src="shoppingcart.png" alt="shopping cart" ></li>
+        <li>$0.00</li>
+          </ul>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Sample Page</a></li>
+            <li><a href="#">Discount 10%</a></li>
+            <li><a href="#">Contacts</a></li>
+            <li><a href="#">Buy Theme</a></li>
+            
+          </ul>
+        </div>
+      </header>
+      
+    </div>
   </body>
 </html>
